tests/ucc/type/bad/assign-plus-struct-vs-int.c
struct b
{
    int a;
};

int main(void)
{
    int a = 1;
    struct b c;

    a += c;

    return 0;
}
